<resources>
    <string name="app_name">Weather 5 days</string>
    <string name="choose_location">Выберите локацию</string>
    <string name="choose_current_location_icon">Иконка выбора текущей локации</string>
    <string name="menu_item_about">О программе</string>
    <string name="menu_item_options">Настройки</string>
    <string name="menu_item_weather">Погода</string>
    <string name="precipitation_label">Осадки:</string>
    <string name="humidity_label">Влажность:</string>
    <string name="current_weather_icon">Иконка погоды</string>
    <string name="pressure_label">Давление:</string>
    <string name="o">o</string>
    <string name="pressure">давление</string>
    <string name="_25">25</string>
    <string name="localtimedate">LocalTimeDate</string>
    <string name="_10">-10</string>
    <string name="celsius_fahrenheit_unit">C</string>
    <string name="detailed_weather_icon">Иконка подробной погоды</string>
    <string name="current_weather_description">CurrentWeatherDescription</string>
    <string name="feels_like_label">Ощущается:</string>
    <string name="_10_velue">10</string>
    <string name="mmhg">mmHg</string>
    <string name="five_days_weather_forecast">Прогноз погоды на 5 дней</string>
    <string name="wind_label">Ветер:</string>
    <string name="choose_background">Выберите цвет фона</string>
    <string name="no_location_detected">Не могу получить координаты. Убедитесь, что геолокация разрешена в настройках.</string>
    <string name="permission_rationale">Разрешение на геолокацию необходимо для базовой функциональности.</string>
    <string name="permission_denied_explanation">Разрешения небыли предоставлены</string>
    <string name="enter_location">Введите локацию</string>
    <string name="location_error_notice">Ошибка получения данных\nУточните локацию</string>
    <string name="weather_icon_small_description">Маленькая иконка погоды</string>
    <string name="visibility_label">Видимость:</string>
    <string name="weather">Погода</string>
    <string name="add_location">+ локация</string>
    <string name="information">Информация</string>
    <string name="copyright_avv_soft_2021">Copyright AVV-soft. 2021</string>
    <string name="settings">Установки</string>
    <string name="units">Единицы измерения</string>
    <string name="temperature">Температура</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="celsius">Цельсий</string>
    <string name="fahrenheit">Фаренгейт</string>
    <string name="m_per_second">м/с</string>
    <string name="miles_per_hour">миль/ч</string>
    <string name="colors">Цвета</string>
    <string name="mm_hg">мм рт.ст.</string>
    <string name="mBar">мБар</string>
    <string name="weather_now_icon">Иконка погоды сейчас</string>
    <string name="weather_now">Погода сейчас</string>
    <string name="options_label">Настройки</string>
    <string name="show_units_options">Показать настройки</string>
    <string name="show_colors">Показать цвета</string>
    <string name="weather_icon_1_set">Набор значков погоды 1</string>
    <string name="weather_icon_2_set">Набор значков погоды 2</string>
    <string name="icon_set_1_example">Пример иконки набора 1</string>
    <string name="icon_set_2_example">Пример иконки набора 2</string>
</resources>