<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutOptions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue4"
    tools:context=".screens.options.OptionsActivity">

    <TextView
        android:id="@+id/textViewOptionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/blue5"
        android:padding="8dp"
        android:text="@string/options_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUnitSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/blue5"
        android:padding="16dp"
        android:paddingStart="8dp"
        android:text="@string/units"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:onClick="onClickImageViewExtendUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOptionsLabel"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/textViewTemperatureUnitLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:background="@color/blue5"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textViewWindUnitLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitSettings"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textViewWindUnitLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/blue5"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/wind_speed"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textViewPressureUnitLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTemperatureUnitLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitSettings"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textViewPressureUnitLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:background="@color/blue5"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:text="@string/pressure_label"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewWindUnitLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitSettings"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGroupTempUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue5"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupWindUnit"
        app:layout_constraintStart_toStartOf="@+id/textViewTemperatureUnitLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureUnitLabel">

        <RadioButton
            android:id="@+id/radioButtonCelsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTempUnitChange"
            android:text="@string/celsius"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonFahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickTempUnitChange"
            android:text="@string/fahrenheit"
            android:textColor="@color/white" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupWindUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue5"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupPressureUnit"
        app:layout_constraintStart_toStartOf="@+id/textViewWindUnitLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewWindUnitLabel">

        <RadioButton
            android:id="@+id/radioButtonMeterPerSec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_per_second"
            android:textColor="@color/white"
            android:onClick="onClickWindUnitChange" />

        <RadioButton
            android:id="@+id/radioButtonMilePerHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miles_per_hour"
            android:textColor="@color/white"
            android:onClick="onClickWindUnitChange" />
    </RadioGroup>


    <TextView
        android:id="@+id/textViewColors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/blue5"
        android:onClick="onClickColors"
        android:padding="16dp"
        android:paddingStart="8dp"
        android:text="@string/colors"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTempUnit"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGroupPressureUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/blue5"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewPressureUnitLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewPressureUnitLabel">

        <RadioButton
            android:id="@+id/radioButtonMmHg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mm_hg"
            android:textColor="@color/white"
            android:onClick="onClickPressureUnitChange" />

        <RadioButton
            android:id="@+id/radioButtonMBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mBar"
            android:textColor="@color/white"
            android:onClick="onClickPressureUnitChange" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewExtendUnits"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/show_units_options"
        android:onClick="onClickImageViewExtendUnits"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUnitSettings"
        app:layout_constraintEnd_toEndOf="@+id/textViewUnitSettings"
        app:layout_constraintTop_toTopOf="@+id/textViewUnitSettings"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/imageViewExtendColors"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/show_colors"
        app:layout_constraintBottom_toBottomOf="@+id/textViewColors"
        app:layout_constraintEnd_toEndOf="@+id/textViewColors"
        app:layout_constraintTop_toTopOf="@+id/textViewColors"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <RadioGroup
        android:id="@+id/radioGroupIconSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/blue5"
        app:layout_constraintStart_toEndOf="@+id/imageViewIconSet01"
        app:layout_constraintTop_toBottomOf="@+id/textViewColors">

        <RadioButton
            android:id="@+id/radioButtonIconSet01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/weather_icon_1_set"
            android:onClick="onClickIconSetChange"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonIconSet02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/weather_icon_2_set"
            android:onClick="onClickIconSetChange"
            android:textColor="@color/white" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewIconSet01"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/icon_set_1_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroupIconSet"
        app:srcCompat="@drawable/f01d" />

    <ImageView
        android:id="@+id/imageViewIconSet02"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/icon_set_2_example"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroupIconSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIconSet01"
        app:srcCompat="@drawable/s01d" />

</androidx.constraintlayout.widget.ConstraintLayout>